# bkmk

./: .cvsignore  .gitignore  ChangeLog  Make.CYGWIN-1.3-pre  Make.Darwin-10.8-pre  Make.Darwin-6.4-pre  Make.Darwin-6.5-pre  Make.Darwin-6.6-pre  Make.Darwin-7.3-pre  Make.FreeBSD-4.5-pre  Make.FreeBSD-4.7-pre  Make.FreeBSD-4.8-pre  Make.FreeBSD-4.9-pre  Make.FreeBSD-5.1-pre  Make.FreeBSD-5.2-pre  Make.FreeBSD-5.3-pre  Make.GNUmakefile  Make.Linux-2.4-post  Make.Linux-2.4-pre  Make.Linux-2.6-pre  Make.OpenBSD-2.9-post  Make.OpenBSD-2.9-pre  Make.OpenBSD-3.1-post  Make.OpenBSD-3.1-pre  Make.bkvariables  Make.config.in  Make.include  Make.override  Make.production  Make.targets  Make.variables  Makefile  UPDATESTANDARD  aclocal.m4  bk.conf.in  chcopy.pl  cleanwhite.pl  configure  configure.in  ex.end.Makefile  (+16 more)
acaux/: README  config.guess  install-sh  ltmain.sh
